infra/k8s/eks-prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skin-lesion-prod
  labels:
    app: skin-lesion-backend
    environment: prod
    platform: eks
